# PracticasComputacionI-1

./: CMakeLists.txt  PlatillaDeFunciones.cpp  tempCodeRunnerFile.cpp
Arreglos/: Arreglos.cpp
Calculadora/: Calculadora.cpp
CargaElectrica/: CMakeLists.txt  CargaElectrica.cpp  Grupo.cpp  Grupo.h  tempCodeRunnerFile.cpp
Ejercicios/: GJ.cpp  PlatillaDeFunciones.cpp
Ejercicios/OOP/: CienTriangulosAleatorios.cpp  LibroDeCalificaciones.cpp  LibroDeCalificaciones.h  Listas.cpp  Listas2.cpp  Triangulo.cpp  Triangulo.h  Triangulo_main.cpp
ExamenParcial2/: Metodos.cpp  Zoo.cpp  animal.h
GaussJordan/: GaussJordan.cpp
Notas de Clase/: NT_11_OCT_2021.md
ProyectoDeUnidadDos/: Groups.h  PH.h  main.cpp  metPH.cpp
ProyectoDeUnidadUno/: CMakeLists.txt  CalculaPH.cpp  CalculadoraBioQuimica.cpp  Calculate.cpp  EspecieMasPresente.cpp  Iso.h  MasPresente.h  PH.h  PesoProteina.cpp  Proteina.h  PuntoIso.cpp  Vectores.cpp  tempCodeRunnerFile.cpp
ProyectoDeUnidadUno/ProyectoDeUnidadDos/: CMakeLists.txt  Groups.h  PH.h  main.cpp  metGroups.cpp
ProyectoDeUnidadUnoH/: CMakeLists.txt  main.cpp
Puntos/: Punto.cpp  Punto.h  Puntos.cpp
